<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.user_detail_activity.UserDetailedActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:navigationIcon="@drawable/arrow_back_fill0_wght400_grad0_opsz24"
            app:title="@string/details" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="@dimen/circular_image_lg"
                android:layout_height="@dimen/circular_image_lg"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="250dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.cardview.widget.CardView
                    android:layout_width="@dimen/circular_image_lg"
                    android:layout_height="@dimen/circular_image_lg"
                    android:layout_gravity="center"
                    app:cardCornerRadius="250dp">

                    <ImageView
                        android:id="@+id/iv_user"
                        android:layout_width="@dimen/circular_image_lg"
                        android:layout_height="@dimen/circular_image_lg"
                        android:scaleType="centerCrop" />

                </androidx.cardview.widget.CardView>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_view_margin"
                android:textAlignment="center"
                android:textSize="28sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_qr"
                style="@style/Widget.Material3.Button.TonalButton.Icon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="@dimen/default_view_margin"
                android:contentDescription="@string/show_qr"
                android:gravity="center"
                android:insetLeft="0dp"
                android:insetTop="0dp"
                android:insetRight="0dp"
                android:insetBottom="0dp"
                android:padding="0dp"
                android:text="@null"
                app:icon="@drawable/qr_code_fill0_wght400_grad0_opsz24"
                app:iconGravity="textStart"
                app:iconPadding="0dp"
                app:iconSize="24dp" />

            <com.google.android.material.card.MaterialCardView
                style="?attr/materialCardViewFilledStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/default_view_margin"
                android:layout_marginTop="@dimen/default_view_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/default_view_margin">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/contact_info"
                        android:textFontWeight="1000"
                        android:textSize="@dimen/text_medium" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/default_view_margin"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/call_fill0_wght400_grad0_opsz24" />

                        <TextView
                            android:id="@+id/tv_phone"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="@dimen/default_view_margin"
                            android:text="691271096"
                            android:textSize="@dimen/text_normal" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/default_view_margin"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/phone_iphone_fill0_wght400_grad0_opsz24" />

                        <TextView
                            android:id="@+id/tv_cell"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="@dimen/default_view_margin"
                            android:text="691271096"
                            android:textSize="@dimen/text_normal" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/default_view_margin"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/mail_fill0_wght400_grad0_opsz24" />

                        <TextView
                            android:id="@+id/tv_mail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="@dimen/default_view_margin"
                            android:text="ericgarciaro@gmail.com"
                            android:textSize="@dimen/text_normal" />

                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                style="?attr/materialCardViewFilledStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/default_view_margin"
                android:layout_marginVertical="@dimen/default_view_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/default_view_margin">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/localization_info"
                        android:textFontWeight="1000"
                        android:textSize="@dimen/text_medium" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/default_view_margin"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/home_fill0_wght400_grad0_opsz24" />

                        <TextView
                            android:id="@+id/tv_address"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="@dimen/default_view_margin"
                            android:text="691271096"
                            android:textSize="@dimen/text_normal" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/default_view_margin"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/map_fill0_wght400_grad0_opsz24" />

                        <TextView
                            android:id="@+id/tv_country"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="@dimen/default_view_margin"
                            android:text="691271096"
                            android:textSize="@dimen/text_normal" />

                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_addUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:backgroundTint="@color/md_theme_light_primary"
        android:contentDescription="@string/add_contact"
        app:srcCompat="@drawable/person_add_fill0_wght400_grad0_opsz24"
        app:tint="@null" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>